fix mobile & header

--- a/store/order-genshin.html
+++ b/store/order-genshin.html
@@ -18,6 +18,7 @@
 body {
   background: #0f172a;
   color: #ffffff;
+  padding-top: 90px;
 }
 
 /* ===== HEADER ===== */
@@ -27,7 +28,14 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
+
 
 .logo {
   font-size: 20px;
