fix genshin page + add wuwa page

--- a/store/order-wuwa.html
+++ b/store/order-wuwa.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Order Joki Genshin Impact - Keisha Store</title>
+<title>Order Joki Wuthering Waves - Keisha Store</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -278,11 +278,11 @@ footer {
 
 <!-- ===== HERO ===== -->
 <div class="game-hero">
-  <img src="asset/genshin.webp" alt="Genshin Impact">
+  <img src="asset/wuwa.webp" alt="Wuthering Wave">
   <div class="game-info">
-    <h1>Joki Genshin Impact</h1>
+    <h1>Joki Wuthering Wave</h1>
     <p>Layanan joki terpercaya untuk Daily Commission, Event,
-    Farming Artifact, dan lainnya. Proses cepat, aman, dan dikerjakan
+    Quest, dan lainnya. Proses cepat, aman, dan dikerjakan
     oleh player berpengalaman.</p>
   </div>
 </div>
@@ -291,40 +291,41 @@ footer {
 
   <!-- ===== NOTES ===== -->
 <div class="notes">
-  <h3>⚠ Ketentuan Layanan Joki</h3>
+  <h3>⚠ Ketentuan & Syarat Layanan Joki</h3>
   <ul>
-    <li><strong>Joki Harian / Mingguan / Bulanan</strong> mencakup Daily Commission dan claim reward. Tidak termasuk Spiral Abyss  dan resin spending standar.</li>
-    <li><strong>Joki Main Quest</strong> berlaku untuk 1 rangkaian quest (Archon / Story Quest). Quest panjang atau multi-chapter bisa dikenakan tambahan biaya.</li>
-    <li><strong>Joki Event</strong> menyesuaikan tingkat kesulitan dan progress akun. Event besar dengan banyak stage akan dihitung sesuai paket.</li>
-    <li><strong>Stellar Reunion</strong> berlaku untuk penyelesaian misi reunion standar (tanpa tambahan Spiral Abyss).</li>
-    <li><strong>Farm Artifact / Domain / Boss Fight</strong> menggunakan resin yang tersedia di akun. Jika resin habis, proses dihentikan atau menunggu refill.</li>
-    <li><strong>Open Map</strong> mencakup pembukaan waypoint, statue, dan domain dasar. Tidak termasuk puzzle kompleks, quest tersembunyi, dan waypoint tersembunyi.</li>
+    <li><strong>Joki Harian / Mingguan / Bulanan</strong> mencakup Daily Commission dan claim reward. Tidak termasuk Waveplate spending.</li>
+    <li><strong>Joki Main Quest</strong> berlaku untuk 1 rangkaian quest (Archon / Story Quest). Quest panjang atau multi-chapter dapat dikenakan biaya tambahan sesuai tingkat kesulitan.</li>
+    <li><strong>Joki Reprise of Tides</strong> mencakup penyelesaian stage event sesuai progress akun. Tingkat kesulitan tinggi atau banyak stage akan menyesuaikan durasi pengerjaan.</li>
+    <li><strong>Open Map</strong> mencakup pembukaan Resonance Nexus, Resonance Beacon, dan Tacet Field utama. Tidak termasuk puzzle kompleks atau 100% exploration.</li>
+    <li><strong>Login Patch</strong> mencakup login harian selama periode patch berlangsung untuk klaim reward event login. Tidak termasuk pengerjaan quest atau event lainnya.</li>
     <li>Customer wajib logout selama proses joki berlangsung untuk menghindari konflik login.</li>
-    <li>Gunakan password sementara demi keamanan akun.</li>
-    <li>Durasi pengerjaan menyesuaikan antrian dan tingkat kesulitan akun.</li>
-    <li>Dengan melakukan order, customer dianggap menyetujui seluruh ketentuan layanan.</li>
+    <li>Disarankan menggunakan password sementara demi keamanan akun.</li>
+    <li>Durasi pengerjaan menyesuaikan antrian, kondisi akun, dan tingkat kesulitan konten.</li>
+    <li>Dengan melakukan order, customer dianggap telah membaca dan menyetujui seluruh ketentuan layanan.</li>
   </ul>
 </div>
+
 
 
   <!-- ===== FORM ===== -->
     <div class="form-box">
       <input type="text" id="nama" placeholder="Nama Anda" required>
 
-      <select id="server" required>
-        <option value="">Pilih Server</option>
-        <option>America</option>
-        <option>Europe</option>
-        <option>Asia</option>
-        <option>TW/HK/MO</option>
-      </select>
+    <select id="server" required>
+      <option value="">Pilih Server</option>
+      <option>America</option>
+      <option>Asia</option>
+      <option>Europe</option>
+      <option>HMT(TW,HK,MO)</option>
+      <option>SEA</option>
+    </select>
 
-      <select id="login" required>
-        <option value="">Pilih Opsi Login</option>
-        <option>Hoyoverse</option>
-        <option>Google</option>
-        <option>Facebook</option>
-      </select>
+    <select id="login" required>
+      <option value="">Pilih Opsi Login</option>
+      <option>Kuro Games</option>
+      <option>Google</option>
+      <option>Facebook</option>
+    </select>
 
     <select id="paket" required>
       <option value="">Pilih Joki</option>
@@ -332,13 +333,7 @@ footer {
       <option value="Mingguan">Joki Mingguan (Rp 15.000 / minggu)</option>
       <option value="Bulanan">Joki Bulanan (Rp 50.000 / bulan)</option>
       <option value="Quest|10000">Joki Main Quest - Rp 10.000</option>
-      <option value="Event-Kecil|10000">Joki Event Kecil - Rp 10.000</option>
-      <option value="Event-Medium|15000">Joki Event Medium - Rp 15.000</option>
-      <option value="Event-Besar|30000">Joki Event Besar - Rp 30.000</option>
-      <option value="Stellar|10000">Stellar Reunion - Rp 10.000</option>
-      <option value="Artifact|5000">Farm Artifact - Rp 5.000</option>
-      <option value="Boss|5000">Boss Fight - Rp 5.000</option>
-      <option value="Domain|5000">Domain - Rp 5.000</option>
+      <option value="Reprise Of Tides|15000">Joki Reprise of Tides - Rp 15.000</option>
       <option value="Open Map|10000">Open Map - Rp 10.000</option>
       <option value="Login Patch|10000">Login Patch - Rp 10.000</option>
     </select>
@@ -552,7 +547,7 @@ paketSelect.addEventListener("change", function(){
     let nomor = "6285852702386";
 
     let pesan = `Halo Min Keisha Store 
-Mau order Joki Genshin Impact nih. Berikut detailnya:
+Mau order Joki Wuthering Waves nih. Berikut detailnya:
 
 Nama: ${nama}
 Server: ${server}
