--- a/store/store.html
+++ b/store/store.html
@@ -298,7 +298,7 @@ footer {
       <img src="asset/wuwa.webp" alt="Joki Wuthering Wave" class="card-img">
       <h3>Joki Wuthering Wave</h3>
       <div class="price">Mulai Rp 3.000</div>
-      <a class="btn" onclick="orderWA('Top Up Valorant Points')">Joki Sekarang</a>
+      <a href="order-wuwa.html" class="btn">Joki Sekarang</a>
     </div>
 
   </div>
