--- a/store/store.html
+++ b/store/store.html
@@ -328,7 +328,7 @@ footer {
       <h3>Joki Honkai Star Rail</h3>
         <img src="asset/hsr.webp" alt="Joki Genshin Impact" class="card-img">
       <div class="price">Mulai Rp 3.000</div>
-      <a class="btn" onclick="orderWA('Top Up Valorant Points')">Joki Sekarang</a>
+    <a href="order-hsr.html" class="btn">Joki Sekarang</a>
     </div>
 
     <div class="card">
@@ -340,16 +340,16 @@ footer {
 
     <div class="card">
       <h3>Joki Free Fire</h3>
-        <img src="asset/ff.webp" alt="Joki Genshin Impact" class="card-img">
+        <img src="asset/ff.webp" alt="Joki Free Fire" class="card-img">
       <div class="price">Mulai Rp 10.000</div>
-      <a class="btn" onclick="orderWA('Top Up Valorant Points')">Joki Sekarang</a>
+      <a href="order-ff.html" class="btn">Joki Sekarang</a>
     </div>
 
     <div class="card">
       <h3>Joki PUBGM</h3>
-        <img src="asset/pubgm.webp" alt="Joki Genshin Impact" class="card-img">
+        <img src="asset/pubgm.webp" alt="Joki PUBGM" class="card-img">
       <div class="price">Mulai Rp 10.000</div>
-      <a class="btn" onclick="orderWA('Top Up UC PUBG')">Joki Sekarang</a>
+    <a href="order-pubgm.html" class="btn">Joki Sekarang</a>
     </div>
 
   </div>
