--- a/portofolio/krp.html
+++ b/portofolio/krp.html
@@ -654,6 +654,33 @@ th {
             <td>2</td>
             <td><a href="asset/sertif/sem2/25.pdf" target="_blank" class="btn">Detail</a></td>
         </tr>
+                <tr>
+            <td class="number-col">26</td>
+            <td>Tingkat Nasional sebagai Peserta<br>
+                Mengikuti Kegiatan/ Forum Ilmiah (Seminar, Lokakarya, Workshop, Pameran)</td>
+            <td>Judul kegiatan Sukses di Masa Perkuliahan: Ketika Kuliah Punya Arah - Real Experience of Active and High-Achieving Students dilaksanakan pada 13 Februari 2026 oleh Jejak Lentera</td>
+            <td>2026</td>
+            <td>2</td>
+            <td><a href="asset/sertif/sem2/26.pdf" target="_blank" class="btn">Detail</a></td>
+        </tr>
+        <tr>
+            <td class="number-col">27</td>
+            <td>Tingkat Nasional sebagai Peserta<br>
+                Mengikuti Kegiatan/ Forum Ilmiah (Seminar, Lokakarya, Workshop, Pameran)</td>
+            <td>Judul kegiatan AI For Muslim Enterpreneurs: Strategi, Mindset and Execution dilaksanakan pada 14 Februari 2026 oleh AI For Everyone</td>
+            <td>2026</td>
+            <td>2</td>
+            <td><a href="asset/sertif/sem2/27.pdf" target="_blank" class="btn">Detail</a></td>
+        </tr>
+         <tr>
+            <td class="number-col">28</td>
+            <td>Tingkat Nasional sebagai Peserta<br>
+                Mengikuti Kegiatan/ Forum Ilmiah (Seminar, Lokakarya, Workshop, Pameran)</td>
+            <td>Judul kegiatan WEBINAR STOP NGERUSAK MENTAL, START MERAWAT GENERASI ! dilaksanakan pada 22 Februari 2026 oleh PAB COMMUNITY KALTIM</td>
+            <td>2026</td>
+            <td>2</td>
+            <td><a href="asset/sertif/sem2/28.pdf" target="_blank" class="btn">Detail</a></td>
+        </tr>
     </table>
 
     <!-- Kegiatan Lainnya -->
